--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <td><input type="checkbox" /></td>
   </tr>
 </table>
-
+add v2 to the string
 <h2 hidden>Game over, refresh to play again 🧑‍💻 🤖!</h2>
 
 <script>
